# SCOP

./: CMakeLists.txt  setup.sh  shader-compiler.sh
includes/: bitmask.hpp  buffer.hpp  command.hpp  descriptor.hpp  device.hpp  graphics.hpp  image.hpp  input.hpp  manager.hpp  mesh.hpp  mesh.tpp  pass.hpp  pipeline.hpp  point.hpp  printer.hpp  renderer.hpp  shape.hpp  swapchain.hpp  time.hpp  utilities.hpp  utilities.tpp  vertex.hpp  vertex.tpp  window.hpp
shaders/: screen.frag  screen.frag.spv  screen.vert  screen.vert.spv
sources/: buffer.cpp  command.cpp  descriptor.cpp  device.cpp  graphics.cpp  image.cpp  input.cpp  main.cpp  manager.cpp  mesh.cpp  pass.cpp  pipeline.cpp  renderer.cpp  swapchain.cpp  time.cpp  utilities.cpp  window.cpp
templates/: mesh.tpp  point.tpp  shape.tpp
